--- a/zgw/index.html
+++ b/zgw/index.html
@@ -10,7 +10,6 @@
 		if(deviceWidth > 750) deviceWidth = 750;
 		document.documentElement.style.fontSize = deviceWidth / 7.5 + 'px';
 	</script>
-	<link rel="stylesheet" href="css/swiper-3.3.1.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/index.css">
@@ -20,12 +19,12 @@
 
 		<nav class="nav">
 			<ul>
-				<li class="homepage"><a href="">首页</a></li>
-				<li class="abstract"><a href="">珠光简介</a></li>
-				<li class="ideal"><a href="">企业理念</a></li>
-				<li class="history"><a href="">发展历程</a></li>
-				<li class="project"><a href="">项目概念</a></li>
-				<li class="about"><a href="">关于我们</a></li>
+				<li class="homepage"><a href="homepage.html" target="main-frame">首页</a></li>
+				<li class="abstract"><a href="abstract.html" target="main-frame">珠光简介</a></li>
+				<li class="ideal"><a href="ideal.html"  target="main-frame">企业理念</a></li>
+				<li class="history"><a href="history.html"  target="main-frame">发展历程</a></li>
+				<li class="project"><a href="project.html"  target="main-frame">项目概念</a></li>
+				<li class="about"><a href="about.html"  target="main-frame">关于我们</a></li>
 			</ul>
 		</nav>
 
@@ -36,39 +35,7 @@
 				<h2>首页</h2>
 			</header>
 
-			<section class="md-banner">
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide"><img src="images/slide-1.png"></div>
-						<div class="swiper-slide">2</div>
-						<div class="swiper-slide">3</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="md-content">
-				<h3>珠光动态</h3>
-				<ul class="news-list">
-					<li>
-						<div class="news-text">
-							<h4>企业特色做强、做大优势</h4>
-							<p>珠光集团深耕澳门35年，业务涉多个领域，在澳具有相当的影响力。集团广泛参与澳门多个领域，在澳具有相当的影响力。多个领域，在澳具有相当的影响力。</p>
-						</div>
-						<div class="news-img">
-							<img src="images/new-1.png">
-						</div>
-					</li>
-					<li>
-						<div class="news-text">
-							<h4>企业特色做强、做大优势</h4>
-							<p>珠光集团深耕澳门35年，业务涉多个领域，在澳具有相当的影响力。集团广泛参与澳门。集团广泛参与澳门多个领域，在澳具有相当的影响力。多个领域，在澳具有相当的影响</p>
-						</div>
-						<div class="news-img">
-							<img src="images/new-1.png">
-						</div>
-					</li>
-				</ul>
-			</section>
+			<iframe src="homepage.html" frameborder="0" name="main-frame"></iframe>
 
 		</section>
 
@@ -78,7 +45,6 @@
 	</div>
 
 	<script src="lib/zepto.js"></script>
-	<script src="lib/swiper-3.3.1.jquery.min.js"></script>
 	<script src="js/index.js"></script>
 </body>
 </html>
