--- a/轻应用/info_wall.html
+++ b/轻应用/info_wall.html
@@ -31,7 +31,7 @@
             </div>
             <div class="reward">
               <a href="#"></a>
-              <span>3500</span>
+              <span></span>
             </div>
           </div>
         </div>
@@ -48,10 +48,10 @@
           <img src="images/fengrenji.jpg">
           <div class="btn">
             <div class="like">
-              <a href="#"></a><span>562</span>
+              <a href="#" class="liked"></a><span>562</span>
             </div>
             <div class="reward">
-              <a href="#"></a>
+              <a href="#" class="rewarded"></a>
               <span>3500</span>
             </div>
           </div>
@@ -92,6 +92,16 @@
 
   <div class="large-img">
     <img src="">
+  </div>
+
+  <div class="reward-details">
+    <div class="point-select">
+      <a href="#" class="selected">10分</a>
+      <a href="#">50分</a>
+      <a href="#">100分</a>
+    </div>
+
+    <div class="btn-wrapper"><a href="#" class="confirm">打赏</a><a href="#" class="cancel">取消</a></div>
   </div>
   <script src="lib/zepto.js"></script>
   <script src="js/info_wall.js"></script>
