--- a/轻应用/blackboard.html
+++ b/轻应用/blackboard.html
@@ -37,7 +37,7 @@
           <div class="date"><span class="day">2016-07-19</span><span class="time">11:36</span></div>
           <p>年岁最久远的要数次卧的角落里那台陈旧的蝴蝶牌脚踏式缝纫机，那是奶奶十九岁嫁给爷爷时的嫁妆。古老的缝纫机虽然效率不高，但却很有时光的质感。</p>
           <img src="images/fengrenji.jpg">
-          <div class="btn"><a href="publish.html" class="comment"></a><a href="#" class="like"></a><span>1234</span></div>
+          <div class="btn"><a href="publish.html" class="comment"></a><a href="#" class="like liked"></a><span>1234</span></div>
         </div>
 
       </li>
