--- a/轻应用/memo.html
+++ b/轻应用/memo.html
@@ -60,14 +60,14 @@
   </div>
 
 <!-- 编辑/新增 -->
-<!--   <div class="md-memo-details">
+  <div class="md-memo-details">
 
       <div class="textarea-wrapper">
         <textarea rows="4" maxlength="60"></textarea>
       </div>
 
       <div class="btn-wrapper"><a href="" class="confirm">保存</a><a href="" class="cancel">取消</a></div>
-  </div> -->
+  </div>
 
   <script src="lib/zepto.js"></script>
   <script src="js/memo.js"></script>
