--- a/zgw/index.html
+++ b/zgw/index.html
@@ -46,6 +46,9 @@
 
 	<script src="lib/zepto.js"></script>
 	<script src="js/index.js"></script>
+	<script type="text/javascript">
+		alert(2);
+	</script>
 </body>
 </html>
 
